Add meta content and SEO

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+      name="description"
+      content="Cate Curtis is a salsa dance and yoga instructor who teaches individuals, couples, and small groups."
+    />
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="manifest" href="./favicon/site.webmanifest">
     <title>Cate Curtis | Dance Instructor</title>
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org/",
+          "@type": "Person",
+          "name": "Cate Curtis",
+          "image": "https://cateloose.com/static/media/smile.c368a04671ddbe42d411.png",
+          "jobTitle": "Dance & Yoga Instructor",
+          "worksFor": {
+            "@type": "Organization",
+            "name": "Cate Curtis"
+          },
+          "url": "https://cateloose.com",
+          "sameAs": [
+            "https://www.instagram.com/cateloose"
+          ],
+          "description": "Cate Curtis is a dance instructor and certified yoga teacher with over 10 years of experience. She specializes in many types of dance and teaches privately in person and virtually.",
+          "gender": "female",
+          "address": {
+            "@type": "PostalAddress",
+            "addressLocality": "Chicago",
+            "addressRegion": "IL",
+            "postalCode": "60609",
+            "addressCountry": "US"
+          },
+          "email": "cate.gc@gmail.com",
+          "hasOfferCatalog": {
+            "@type": "OfferCatalog",
+            "name": "Dance Classes",
+            "itemListElement": [
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Class",
+                  "name": "Salsa",
+                  "description": "Salsa for couples or individuals. Suitable for all levels."
+                },
+                "price": "60.00",
+                "priceCurrency": "USD",
+                "availability": "https://schema.org/InStock"
+              },
+              {
+                "@type": "Offer",
+                "itemOffered": {
+                  "@type": "Class",
+                  "name": "Yoga",
+                  "description": "A gentle or challenging yoga practice for 1-6 students. Suitable for all levels."
+                },
+                "price": "60.00",
+                "priceCurrency": "USD",
+                "availability": "https://schema.org/InStock"
+              }
+            ]
+          }
+        }
+      </script>      
 </head>
 <body>
     <div id="root"></div>
